--- a/portfolio /static/css/style.css
+++ b/portfolio /static/css/style.css
@@ -1,8 +1,63 @@
-html{
+html, body {
     height: 100%;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
 }
+
+.bgimg-1, .bgimg-2, .bgimg-3 {
+      position: relative;
+      opacity: 0.65;
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+
+    }
+    .bgimg-1 {
+      background-image: url("../img/usf.png");
+      min-height: 100%;
+    }
+
+    .bgimg-2 {
+      background-image: url("../img/tech.jpg");
+      min-height: 400px;
+    }
+
+    .bgimg-3 {
+      background-image: url("../img/brain.jpg");
+      min-height: 400px;
+    }
+
+    .caption {
+      position: absolute;
+      left: 0;
+      top: 50%;
+      width: 100%;
+      text-align: center;
+      color: #000;
+    }
+
+    .caption span.border {
+      background-color: #111;
+      color: #fff;
+      padding: 18px;
+      font-size: 25px;
+      letter-spacing: 10px;
+    }
+
+    h3 {
+      letter-spacing: 5px;
+      text-transform: uppercase;
+      font: 20px "Lato", sans-serif;
+      color: #111;
+    }
+
+    /* Turn off parallax scrolling for tablets and phones */
+    @media only screen and (max-device-width: 1024px) {
+      .bgimg-1, .bgimg-2, .bgimg-3 {
+        background-attachment: scroll;
+      }
+    }
 *{
 	margin: 0;
     padding: 0;
@@ -29,7 +84,7 @@ a.write{
     cursor: pointer;
     text-decoration: none;
     font-weight: 600;
-    color: rgb(17,47,65);;
+    color: #112f41;
 }
 
 body.content{
@@ -93,7 +148,6 @@ ul {
     background-color: rgb(226, 233, 238);
 }
 .background-shape{
-    background: url("file:///Volumes/Becky/BerkeleyOnlineTutors/GitHub/portfolio/static/img/backgroundShape.tiff");
 }
 .background-shape:after{
    background: url('../img/self.jpg');
@@ -110,24 +164,24 @@ ul {
 }
 .heading{
 	font-family: 'Raleway', sans-serif;
-	font-weight: 100;
+	font-weight: 400;
     font-size: 44px;
 	text-align:	center;
-    color: rgb(17,47,65);
+    color: #112f41;
 }
 .heading-sub{
     font-family: 'Raleway', sans-serif;
     font-size: 20px;
     margin: .25em;
     text-align: center;
-    color: rgb(8,148,161);
+    color: #0894a1;
 }
 .known-lang{ 
     padding-top: 5px;
 	font-size: 15px;
 	text-align: center;
 	font-family: 'Raleway', sans-serif;
-    color: rgb(8,148,161);
+    color: black;
 
 }
 .program-cta{
